@@ -1,4 +1,5 @@
 import org.junit.jupiter.api.BeforeAll;
+import org.junit.jupiter.api.Test;
 import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.ValueSource;
 
@@ -13,14 +14,26 @@ import static org.junit.jupiter.api.Assertions.assertEquals;
 
 public class DifferTest {
     private static String expectedJson;
+    private static String expectedYaml;
     @BeforeAll
     public static void readResult() throws Exception {
-        expectedJson = new String(Files.readAllBytes(Paths.get("src/test/resources/result.json")));
+
+        expectedJson = Files.readString(Paths.get("src/test/resources/result.json")).trim();
+        expectedYaml = Files.readString(Paths.get("src/test/resources/result.yaml")).trim();
     }
-    @ParameterizedTest
-    @ValueSource(strings = {"json", "yaml"})
-    public void testToJson(String type) throws Exception {
-        var actual = Differ.generate("file1." + type, "file2." + type, "json");
+    @Test
+    public void testToJson() throws Exception {
+        var actual = Differ.generate("src/test/resources/file1.json", "src/test/resources/file2.json", "json");
+        assertEquals(expectedJson, actual);
+    }
+    @Test
+    public void testToYaml() throws Exception {
+        var actual = Differ.generate("src/test/resources/file1.yaml", "src/test/resources/file2.yaml", "json");
+        assertEquals(expectedYaml, actual);
+    }
+    @Test
+    public void testToStylish() throws Exception {
+        var actual = Differ.generate("src/test/resources/file1.json", "src/test/resources/file2.json", "json");
         assertEquals(expectedJson, actual);
     }
 }
